# Wildfire-Robotics

./: .gitignore  CMakeLists.txt  README.md  deploy_RTOS.sh  setup.sh
READMEs/: SETUP.md  STM32_FLASH.md
WIP/: setup.sh
_LINUX/FLASH/: custom_flash.cfg
_RTOS/main/: main.ino
_RTOS/main/LEDMatrixHandler/: LEDMatrixBounce.cpp  LEDMatrixBounce.h  LEDMatrixCircular.cpp  LEDMatrixCircular.h  LEDMatrixHandler.h
